@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ==================================================================
+    * Added hooks on_uprivmsg and on_cprivmsg.
     * Module names are now case sensitive.
     * Added config option module for auto-loading a module.
     * Fixed a bug in API::Log that caused invalid months.
